Update test for SearchPredicate and ArgumentMultiMap